--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,4 @@ jobs:
     working_directory: /go/src/github.com/nullck/k-logs-test
     steps:
       - checkout
-      - run: go get -v -t -d ./...
-      - run: go test -v ./pkg/...
+      - run: make test
