--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,5 @@ jobs:
     working_directory: /go/src/github.com/nullck/k-logs-test
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run: make test-ci
