--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,3 +13,5 @@ jobs:
       run: |
         kubectl cluster-info
         kubectl get pods -n kube-system
+        kubectl apply -f scripts/fluentbit
+        kubectl apply -f scripts/elastic
