--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,6 +9,10 @@ jobs:
     - uses: engineerd/setup-kind@v0.4.0
       with:
         version: "v0.8.1"
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.14.x
     - name: Testing
       run: |
         bash scripts/test.sh start
