--- a/infra/k-logs-test/templates/prom-pushgw-service-account.yaml
+++ b/infra/k-logs-test/templates/prom-pushgw-service-account.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .serviceAccountName }}
+  namespace: {{ .Values.namespace.name }}
   labels:
     {{- include "k-logs-test.labels" . | nindent 4 }}
 {{- with .Values.promGateway }}
