--- a/infra/k-logs-test/templates/prom-pushgw-service.yaml
+++ b/infra/k-logs-test/templates/prom-pushgw-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: prometheus-pushgateway
+  namespace: {{ .Values.namespace.name }}
   annotations:
     {}
   labels:
