--- a/infra/k-logs-test/templates/serviceaccount.yaml
+++ b/infra/k-logs-test/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "k-logs-test.serviceAccountName" . }}
+  namespace: {{ .Values.namespace.name }}
   labels:
     {{- include "k-logs-test.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
