--- a/.github/workflows/build_push.yaml
+++ b/.github/workflows/build_push.yaml
@@ -56,7 +56,7 @@ jobs:
         if: success() && github.event_name != 'pull_request'
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
         name: Docker Buildx (push)
