--- a/infra/k-logs-test/values.yaml
+++ b/infra/k-logs-test/values.yaml
@@ -14,7 +14,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 namespace:
-  create: true
+  create: false
   name: k-logs
 
 serviceAccount:
@@ -24,7 +24,7 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: ""
+  name: "k-logs-sa"
 
 podAnnotations: {}
 
