--- a/infra/k-logs-test/templates/prom-pushgw-service-account.yaml
+++ b/infra/k-logs-test/templates/prom-pushgw-service-account.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .serviceAccountName }}
+  name: {{ .Values.promGateway.serviceAccountName }}
   namespace: {{ .Values.namespace.name }}
   labels:
     {{- include "k-logs-test.labels" . | nindent 4 }}
