--- a/infra/k-logs-test/templates/serviceaccount.yaml
+++ b/infra/k-logs-test/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k-logs-test.serviceAccountName" . }}
+  name: {{ .Values.serviceAccount.name }}
   namespace: {{ .Values.namespace.name }}
   labels:
     {{- include "k-logs-test.labels" . | nindent 4 }}
