--- a/infra/k-logs-test/templates/deployment.yaml
+++ b/infra/k-logs-test/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "k-logs-test.serviceAccountName" . }}
+      serviceAccountName: {{ include "k-logs-test.name" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
