--- a/scripts/elastic/elastic.yaml
+++ b/scripts/elastic/elastic.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: elasticsearch
-        image: docker.elastic.co/elasticsearch/elasticsearch:6.6.1
+        image: elasticsearch:6.6.1
         env:
         - name: discovery.type
           value: single-node
